--- a/inertia/css/app.css
+++ b/inertia/css/app.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
-
+@import url('plus-jakarta-sans.css');
 * {
   margin: 0;
   padding: 0;
@@ -10,4 +10,7 @@ body,
 #app {
   height: 100%;
   width: 100%;
+  font-family:
+    Plus Jakarta,
+    sans-serif;
 }
