--- a/inertia/css/app.css
+++ b/inertia/css/app.css
@@ -8,6 +8,9 @@
 html,
 body,
 #app {
+  background-image: url('../assets/gradient_background.svg');
+  background-position: center;
+  background-repeat: no-repeat;
   height: 100%;
   width: 100%;
   font-family:
