--- a/inertia/css/app.css
+++ b/inertia/css/app.css
@@ -13,7 +13,8 @@ body,
   background-repeat: no-repeat;
   height: 100%;
   width: 100%;
-  font-family:
-    Plus Jakarta,
-    sans-serif;
+  font-family: 'Plus Jakarta', sans-serif;
+}
+.custom-shadow {
+  box-shadow: 0px 0px 15px #404040;
 }
