--- a/inertia/css/app.css
+++ b/inertia/css/app.css
@@ -11,6 +11,7 @@ body,
   background-image: url('../assets/gradient_background.svg');
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
   width: 100%;
   font-family: 'Plus Jakarta', sans-serif;
